[gd_scene load_steps=2 format=3 uid="uid://hud"]

[ext_resource type="Script" path="res://src/ui/HUD.gd" id="1_script"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LayoutBtn" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Auto Layout"

[node name="UndoBtn" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Undo"

[node name="RedoBtn" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Redo"

[node name="ExportBtn" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Export DOT"

[connection signal="pressed" from="Panel/HBoxContainer/LayoutBtn" to="." method="_on_layout_btn_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/UndoBtn" to="." method="_on_undo_btn_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/RedoBtn" to="." method="_on_redo_btn_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ExportBtn" to="." method="_on_export_btn_pressed"]
